# SciGate

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: SKILL.md  settings.json
.cursor/rules/: scigate-agents.mdc  scigate-architecture.mdc  scigate-checks.mdc  scigate-scoring.mdc
.cursor/skills/scigate-dev/: SKILL.md
.github/workflows/: scigate.yml
.scigate/: policy.yml
agents/: audit_agent.py  fix_agent.py  memory_agent.py  notify_agent.py  regression_agent.py  tracker.py
api/: server.py
dashboard/: index.html  server.py
gitlab/: fix_agent.py  scigate-flow.yml
infra/: prometheus.yml
integrations/ci/: __init__.py  base.py  github_actions.py  jenkins.py  woodpecker.py
integrations/notify/: __init__.py  base.py  mattermost.py  ntfy.py
integrations/vcs/: __init__.py  base.py  gitea_adapter.py  github_adapter.py
memory/: leaderboard.json  patterns.json
policy/: loader.py
scigate/: __init__.py  cli.py
scigate/agents/: __init__.py  audit.py  fix.py  memory.py
scigate/memory/: __init__.py
scigate/scoring/: __init__.py  badge.py  engine.py
scigate/utils/: __init__.py  claude_client.py  repo_scanner.py
tests/: test_agents.py  test_e2e.py  test_scoring.py
